[package]
name = "LRA-Calculator-Rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "lra_calculator_rust"
path = "src/lib.rs"

[[bin]]
name = "LRA-Calculator-Rust"
path = "src/main.rs"

[dependencies]
regex = "1"
walkdir = "2"
rayon = "1"
#tempfile = "3"
chrono = "0.4" # <--- 确保这一行存在 (用于时间和日期)
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
